<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Story!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk berbagi cerita?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="oops_something_went_wrong">Kesalahan tidak diketahui\n</string>
    <string name="try_again">Coba lagi\n</string>
    <string name="logout_title">Keluar</string>
    <string name="gambar_item">Gambar Item</string>
    <string name="tambah_story_baru">Tambah story baru</string>
    <string name="appwidget_text">Stories</string>
    <string name="add_widget">Tambah widget</string>
    <string name="app_widget_description">Ini adalah deskripsi widget aplikasi</string>
    <string name="title_camera">Kamera</string>
    <string name="title_gallery">Galeri</string>
    <string name="hint_description">Ketik deskripsi disini…</string>
    <string name="title_upload">Unggah</string>
    <string name="no_data">TIDAK ADA DATA</string>
    <string name="success_signup">Akun dengan %s sudah jadi nih. Yuk, login dan lihat cerita.</string>
    <string name="retry">Coba lagi</string>
    <string name="s_story">Cerita %1$s</string>
    <string name="failed_to_load_story">Gagal memuat cerita</string>
    <string name="success_login">Anda berhasil login. Sudah tidak sabar untuk berbagi cerita ya?</string>
    <string name="name_validation_msg">Nama tidak boleh kosong</string>
    <string name="email_validation_msg">Email tidak valid</string>
    <string name="pass_validation_msg">Password tidak boleh kurang dari 8 karakter</string>
    <string name="no_image_selected">Tidak ada gambar yang dipilih</string>
    <string name="change_language_title">Ganti Bahasa</string>
    <string name="add_story">Tambah Cerita Baru</string>
</resources>